Fix layout issue with Toggle UI
The Toggle was overlapping the user name as a result of absolute
positioning. Since the absolute positioning was intended to fix a layout
problem on smaller screens a different solution was used. This commit
also changes the color on the toggle switch and adds shadow.

--- a/troposphere/static/css/app/header.scss
+++ b/troposphere/static/css/app/header.scss
@@ -78,23 +78,15 @@
 
 .beta-toggle {
   position: absolute;
-  right:120px;
-  top:0;
   padding-top: 16px;
   padding-bottom: 9px;
-  @media (max-width:1200px) {
-    right:0;
-  }
-  @media (max-width:762px) {
-    right:72px;
-  }
   .toggle-wrapper {
     position: relative;
     padding-top: 1px;
   }
 
   .toggle-background {
-    background-color: rgba(17, 5, 1, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     width: 103px;
     height: 20px;
     border-radius: 14px;
@@ -104,16 +96,17 @@
   .toggle-text {
     padding-top: 1px;
     margin-left: 7px;
-    color: #FCEEEB;
+    color: #c3e9f3;
     font-family: Helvetica;
     font-weight: 100;
   }
 
   .toggle-switch {
-    width: 22px;
-    height: 22px;
+    width: 21px;
+    height: 21px;
     position: absolute;
-    background-color: #E4E4E4;
+    background-color: #1490d5;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.5);
     border-radius: 12px;
     top: 0px;
     right: 0px;
